style: fix spacing for sections when navigating with inline links

--- a/src/App.css
+++ b/src/App.css
@@ -284,7 +284,7 @@ body {
   align-items: flex-start;
   justify-content: center;
   gap: 15px;
-  height: 75vh;
+  height: 70vh;
   max-width: 955px;
   margin-top: 60px;
 }
